--- a/index.html
+++ b/index.html
@@ -60,7 +60,6 @@
         <button id="boykisser-close" class="bk-close-btn">&times;</button>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/lunr/lunr.min.js"></script>
     <script>
         let allProjects = [];
         let activeTags = new Set();
@@ -70,7 +69,6 @@
         const grid = document.getElementById('portfolio-grid');
         const paginationContainer = document.getElementById('pagination-container');
         const tagContainer = document.getElementById('tag-filter-container');
-		let searchIndex; // Variable para guardar el índice de búsqueda
 
         marked.setOptions({ gfm: true, breaks: true });
 
@@ -82,28 +80,6 @@
                 }
             });
         }, { threshold: 0.1 });
-		
-		function buildSearchIndex(proyectos) {
-            searchIndex = lunr(function () {
-                this.ref('id'); // Usamos el ID para identificar cada proyecto
-                this.field('titulo', { boost: 10 }); // El título tiene 10 veces más importancia
-                this.field('resumen', { boost: 5 });  // El resumen tiene 5 veces más importancia
-                this.field('contenido_completo');    // El contenido completo tiene importancia normal
-                this.field('tags');                  // También buscamos en las etiquetas
-
-                proyectos.forEach(function (p) {
-                    // CORRECCIÓN: Nos aseguramos de que las etiquetas se procesen correctamente
-                    const docToAdd = {
-                        id: p.id,
-                        titulo: p.titulo,
-                        resumen: p.resumen,
-                        contenido_completo: p.contenido_completo,
-                        tags: (p.tags || []).join(' ') // Convertimos el array de etiquetas en un texto simple
-                    };
-                    this.add(docToAdd);
-                }, this);
-            });
-        }
 
         function renderCards(proyectos) {
             grid.innerHTML = '';
@@ -271,21 +247,12 @@
         }
 
         function filterAndRender() {
-            const searchTerm = searchBox.value.toLowerCase().trim();
-            let filtered = [];
+            const searchTerm = searchBox.value.toLowerCase();
+            let filtered = allProjects;
 
             if (searchTerm) {
-                // Si hay un término de búsqueda, usamos el índice de Lunr.js
-                const searchResults = searchIndex.search(searchTerm + '*'); // El '*' permite buscar mientras escribes
-                // Mapeamos los resultados (que solo tienen el ID) a los objetos de proyecto completos
-                filtered = searchResults.map(result => {
-                    return allProjects.find(p => p.id === result.ref);
-                });
-            } else {
-                // Si no hay búsqueda, usamos la lista completa de proyectos
-                filtered = allProjects;
+                filtered = filtered.filter(p => p.titulo.toLowerCase().includes(searchTerm));
             }
-
             if (activeTags.size > 0) {
                 const activeTagsArr = [...activeTags];
                 filtered = filtered.filter(p => {
@@ -294,16 +261,12 @@
                     });
                 });
             }
-
             renderCards(filtered);
             setupPagination(filtered.length);
-            updateAllButtonStates();
-            updateURLParameters();
         }
 
         fetch('proyectos.json').then(r=>r.json()).then(data=>{
             allProjects=data.items||[];
-			buildSearchIndex(allProjects);
             window.proyectos=allProjects;
             buildAndRenderTags(allProjects);
             filterAndRender();
