--- a/index.html
+++ b/index.html
@@ -464,6 +464,19 @@
 
         })();
     </script>
+	
+	<script>
+  if ('serviceWorker' in navigator) {
+    window.addEventListener('load', () => {
+      navigator.serviceWorker.register('/sw.js').then(registration => {
+        console.log('ServiceWorker registrado con éxito:', registration.scope);
+      }).catch(error => {
+        console.log('Fallo en el registro del ServiceWorker:', error);
+      });
+    });
+  }
+</script>
+
 </body>
 </html>
 
