--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>iLupo Warehouse</title>
+    <meta name="description" content="Bienvenido a mi almacén digital. Un portfolio con herramientas, utilidades para Windows, mods y proyectos de juegos creados por alberto64674yt.">
+	<meta name="keywords" content="iLupo, alberto64674yt, portfolio, utilidades, software, mods, gaming">
+	<title>iLupo Warehouse</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;700&display=swap" rel="stylesheet">
@@ -479,5 +481,6 @@
 
 </body>
 </html>
+
 
 
