--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Bienvenido a mi almacén digital. Un portfolio con herramientas, utilidades para Windows, mods y proyectos de juegos creados por alberto64674yt.">
 	<meta name="keywords" content="iLupo, alberto64674yt, portfolio, utilidades, software, mods, gaming">
-	<title>iLupo Warehouse</title>
+	<title>iLupo Warehouse | Portfolio de Proyectos y Utilidades</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;700&display=swap" rel="stylesheet">
@@ -481,6 +481,7 @@
 
 </body>
 </html>
+
 
 
 
