--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sobre Mí | iLupo Warehouse</title>
+    <meta name="description" content="Conoce a alberto64674yt, el creador de iLupo Warehouse. Un apasionado de los videojuegos y la programación que comparte sus herramientas y proyectos.">
+	<title>Sobre Mí | iLupo Warehouse</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;700&display=swap" rel="stylesheet">
