--- a/tags.html
+++ b/tags.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyectos por Etiqueta</title>
+	<meta name="description" content="">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;700&display=swap" rel="stylesheet">
@@ -31,6 +32,14 @@
             const params = new URLSearchParams(window.location.search);
             const tagName = params.get('tag');
             const titleElement = document.getElementById('tag-page-title');
+			// --- INICIO DE CÓDIGO SEO AÑADIDO ---
+			// Actualiza el título de la página y la meta descripción
+			document.title = `Proyectos de ${tagName} | iLupo Warehouse`;
+			const metaDescription = document.querySelector('meta[name="description"]');
+			if (metaDescription) {
+    		metaDescription.setAttribute('content', `Explora todos los proyectos y herramientas etiquetados como '${tagName}' en el portfolio de iLupo Warehouse.`);
+			}
+			// --- FIN DE CÓDIGO SEO AÑADIDO ---
             const grid = document.getElementById('portfolio-grid');
 
             const cardObserver = new IntersectionObserver((entries, observer) => {
