--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 </head>
 <body>
     <header id="main-header" class="no-select">
+		<img src="/favicon/favicon.svg" alt="Logo de iLupo Warehouse" style="display: block; margin: 0 auto 1.5rem auto; width: 72px; height: 72px;">
         <h1>iLupo Warehouse</h1>
         <p class="subtitle" id="subtitle">
             "Con gran fluidez, mi pequeño workflow exhibe hoy la hazaña de zanjar viejos bugs."
@@ -481,6 +482,7 @@
 
 </body>
 </html>
+
 
 
 
