--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <header id="main-header" class="no-select">
-		<img id="header-logo" src="/favicon/favicon.svg" alt="Logo de iLupo Warehouse" style="display: block; margin: 0 auto 1.5rem auto; width: 128px; height: 128px; -webkit-user-select: none; -ms-user-select: none; user-select: none; pointer-events: none;">
+		<img id="header-logo" draggable="false" src="/favicon/favicon.svg" alt="Logo de iLupo Warehouse" style="display: block; margin: 0 auto 1.5rem auto; width: 128px; height: 128px; -webkit-user-select: none; -ms-user-select: none; user-select: none;">
         <h1>iLupo Warehouse</h1>
         <p class="subtitle" id="subtitle">
             "Con gran fluidez, mi pequeño workflow exhibe hoy la hazaña de zanjar viejos bugs."
@@ -526,6 +526,7 @@ closeVideoBtn.addEventListener('click', function() {
 
 </body>
 </html>
+
 
 
 
